--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "wangjialin/ajax-json",
     "description": "Format the return instance.",
-    "version":"v1.0.3",
     "type": "library",
     "require": {
         "php": ">=5.3.0"
@@ -17,5 +16,6 @@
             "name": "wangjialin",
             "email": "wangjialin.bj@gmail.com"
         }
-    ]
+    ],
+	"minimum-stability":"dev"
 }
